stopped stretching

--- a/style.css
+++ b/style.css
@@ -20,6 +20,9 @@ body {
   background-size: contain;
   background-repeat: no-repeat;
   color: hsl(0, 0%, 100%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 header {
@@ -31,6 +34,7 @@ header img {
 }
 
 .section {
+  width: 25em;
   display: flex;
   flex-direction: column;
   margin-bottom: 4em;
